<resources>
    <string name="app_name">appNavView</string>
    <string name="action_settings">Settings</string>
    <string name="seccion_1">Seccion 1</string>
    <string name="seccion_2">Seccion 2</string>
    <string name="otras_opciones">Otras Opciones</string>
    <string name="opcion_1">Opcion 1</string>
    <string name="opcion_2">Opcion 2</string>
    <string name="seccion_3">Seccion 3</string>
    <string name="usuario">Usuario</string>
    <string name="menu_abierto">Menu Abierto</string>
    <string name="menu_cerrado">Menu Cerrado</string>
    <string name="fragmento1">Fragmento 1</string>
    <string name="fragmento2">Fragmento 2</string>
    <string name="fragmento3">Fragmento 3</string>

    <string name="hello_blank_fragment">Hola fragmento en Blanco</string>
</resources>